3.4
	+ Depend on new samba packaging instead of old samba4 one
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Fix typo in SambaLdapUser that fixes error in change email
	+ Change user modification hook from _modifyUser to _preModifyUser
	+ Throw DataExists exception if the user try to rename a user on a
	  container and already exists
	+ Check for duplicated DN on user creation and show a proper error, not
	  an internal exception.
	+ Fixed s4sync's breakage when tries to sync serviceprincipals to
	  OpenLDAP. Those users are ignored on EBox::LDB::users method
	+ Remove group share on group deletion
	+ Set the setShareRightsReset flag on SambaSharesPermissions row deletion
	+ Samba log helper is now aware of utf8
	+ EBox::Samba::LdbObject::deleteObject - Delete all childs before self
	  deletion
	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
	  defer it until s4sync does the synchronization
	+ Typo fix in netbios validation
	+ Check if objects are system critical before deletion
3.3
	+ Renamed printableName to File Sharing and Domain Services
	+ Split settings in two menu entries: Domain and File Sharing
	+ Switch from Error to TryCatch for exception handling
	+ Provision - Clear link attribute on __USERS__ entry when provisioning as
				  adc
	  adc
	+ Provision - Remove DomainAdmins,Administrator and Guest from openLDAP
	              when reprovisioning as additional DC
	+ Do not hide domain guest account
	+ Fix share guest access, based on domain guest account enabled status
	+ LDB - Do not return users holding a servicePrincipalName by default
	+ Provision - Improve the LDAP OUs purge after join domain
	+ s4sync - Serveral fixes to make it more robust
	+ OU - Improve creation code
	+ LDB - Return OUs ordered, parents before childs
	+ Provision - Link accounts holding zentyal service principals
	+ Provision - Improve OU loading, skip zentyal internal OUs and linked