@@ -1,4 +1,5 @@
 3.4
+	+ Use new addModuleToPostSave Global interface in Provision class
 	+ Depend on new samba packaging instead of old samba4 one
 	+ Use service instead of deprecated invoke-rc.d for init.d scripts
 	+ Set version to 3.4
